[gd_scene load_steps=27 format=2]

[ext_resource path="res://Yu.gd" type="Script" id=1]
[ext_resource path="res://Friend Sprites/DW_OMORI (2).png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.78678
height = 8.7565

[sub_resource type="Animation" id=2]
resource_name = "YuDownWalk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "YuIdleDown"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "YuIdleLeft"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=5]
resource_name = "YuIdleRight"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
resource_name = "YuIdleUp"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 37 ]
}

[sub_resource type="Animation" id=7]
resource_name = "YuLeftWalk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 13, 12 ]
}

[sub_resource type="Animation" id=8]
resource_name = "YuRightWalk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 25, 24 ]
}

[sub_resource type="Animation" id=9]
resource_name = "YuWalkUp"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 37, 36 ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "YuIdleLeft"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "YuIdleDown"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "YuIdleRight"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "YuIdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=17]
blend_point_0/node = SubResource( 13 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 14 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 15 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 16 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "YuLeftWalk"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "YuDownWalk"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "YuRightWalk"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "YuWalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, -1 )

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=11]
states/YuIdle/node = SubResource( 17 )
states/YuIdle/position = Vector2( 370, 110 )
states/YuRun/node = SubResource( 22 )
states/YuRun/position = Vector2( 610, 110 )
transitions = [ "YuIdle", "YuRun", SubResource( 23 ), "YuRun", "YuIdle", SubResource( 24 ) ]
start_node = "YuIdle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="CircleShape2D" id=10]
radius = 48.9935

[node name="Yu" type="KinematicBody2D"]
collision_layer = 64
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.776267, 0.776267 )
texture = ExtResource( 2 )
hframes = 11
vframes = 12
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="AnimationPlayerYu" type="AnimationPlayer" parent="."]
anims/YuDownWalk = SubResource( 2 )
anims/YuIdleDown = SubResource( 3 )
anims/YuIdleLeft = SubResource( 4 )
anims/YuIdleRight = SubResource( 5 )
anims/YuIdleUp = SubResource( 6 )
anims/YuLeftWalk = SubResource( 7 )
anims/YuRightWalk = SubResource( 8 )
anims/YuWalkUp = SubResource( 9 )

[node name="AnimationTreeYu" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayerYu")
active = true
parameters/playback = SubResource( 12 )
parameters/YuIdle/blend_position = Vector2( -0.000777006, 0 )
parameters/YuRun/blend_position = Vector2( -0.000777006, -0.00862074 )

[node name="YuFollow" type="Area2D" parent="."]
position = Vector2( -0.630669, 3.36359 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="YuFollow"]
position = Vector2( 0.944931, -1.88988 )
shape = SubResource( 10 )

[connection signal="body_entered" from="YuFollow" to="." method="_on_YuFollow_body_entered"]
